fix: Button spacing on narrow screen

--- a/_theme/scss/_tweaks.scss
+++ b/_theme/scss/_tweaks.scss
@@ -153,3 +153,7 @@ pre {
   background-color: $color-primary-light;
   border: 1px solid $gray-500;
 }
+
+#topside-action-buttons .btn {
+  margin-top: 5px;
+}
