--- a/_theme/scss/_variables.scss
+++ b/_theme/scss/_variables.scss
@@ -73,7 +73,7 @@ $theme-colors: (
 );
 
 $body-bg:       $black;
-$body-color:    $gray-200;
+$body-color:    $gray-100;
 
 // ------------------------------------------------------
 // Fonts
